# Analisis-de-yelp

./: README.md  actividad 1.ipynb  pyproject.toml
Proyecto_1/src/: Parte1.ipynb  parte2.ipynb
Proyecto_3/src/: AnalisisPAralelo.ipynb  AntiguaForma.ipynb  NuevaForma.ipynb  main.py
proyecto_2/src/: LogisticRegression.ipynb  main.ipynb
src/: Parte1.ipynb  parte2.ipynb
