[tool.poetry]
name = "proyecto de yelp"
version = "0.1.0"
description = ""
authors = ["Juan Sebastian Garcia Alzate <117672609+JuanSebastianGarcia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
nltk = "^3.9.1"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
